# rivendell

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_GUIDE.md  INSTALL.md  MERGE_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  rebuild.sh  rivendell
.claude/: CLAUDE.md  mcp.json  settings.json  threat-model.md
.claude/hooks/: command-audit.sh  lint-check.sh  load-threat-model.sh  secret-scan.sh  snapshot-session.sh
acquisition/bash/: gandalf.sh
analysis/: Dockerfile  README.md  nginx.conf
analysis/config/: __init__.py  settings.py
analysis/docker/: docker-compose-integrated.yml  docker-compose.prod.yml  docker-compose.yml
analysis/docs/: DOCKER-INTEGRATED.md  DOCKER-QUICKSTART.md
analysis/mitre/: README.md  __init__.py  attck_updater.py  cli.py  coverage_analyzer.py  coverage_cli.py  dashboard_generator.py  examples.py  standalone_dashboard.py  technique_mapper.py
analysis/platform/: base.py  macos.py
analysis/rivendell/: main.py  mount.py  utils.py
analysis/rivendell/ai/: __init__.py  cli.py  indexer.py  models.py  query_engine.py  web_interface.py
analysis/rivendell/cloud/: __init__.py  base.py  cli.py
analysis/rivendell/memory/: memory.py  volcore.py
analysis/rivendell/post/: yara.py
analysis/scripts/: docker-start.sh
analysis/tests/: README.md  conftest.py  pytest.ini
analysis/tests/integration/: __init__.py  test_web_api.py
analysis/tests/unit/: test_engine.py  test_tasks.py
analysis/tools/: manager.py  siem_installer.py
analysis/utils/: __init__.py  constants.py  helpers.py  macos.py  validators.py
analysis/web/: README.md
analysis/web/backend/: __init__.py  main.py
common/: __init__.py  archiving.py  audit.py  crypto.py  file_ops.py  hashing.py  time_utils.py
config/: ai.yml  defaults.py  mitre.yml
docker/: nginx.conf
docs/: ACCESSING-DATA.md  AI_AGENT.md  API.md  ARCHITECTURE.md  ARTIFACTS.md  CHANGELOG_LATEST.md  CLI.md  CLOUD_FORENSICS_GUIDE.md  CONFIG.md  DEFERRED_MEMORY_PROCESSING.md  ERU.md  FEATURE1_MITRE_INTEGRATION.md  FEATURE2_COVERAGE_ANALYSIS.md  FILE_DESCRIPTOR_MANAGEMENT.md  FUNCTIONALITY.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_VISUAL_GUIDE.md  INTEGRATION_SUMMARY.md  PROGRESS_TRACKING.md  QUICKSTART.md  QUICK_START.md  README.md  REFACTORING.md  REQUIREMENTS.md  SECURITY.md  SIEM_AUTO_INSTALL.md  SIEM_SETUP.md  TOOLS.md  USAGE.md  USER_GUIDE.md  WEB_INTERFACE_DESIGN.md  elrond-README.md
docs/archive/: IMPLEMENTATION_SUMMARY.md  INSTALLATION_GUIDE.md  INSTALLATION_SYSTEM_SUMMARY.md  PHASE1_2_IMPLEMENTATION.md  PHASE3_IMPLEMENTATION.md  PHASE3_VERIFICATION.md  PHASE4_IMPLEMENTATION.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_IMPLEMENTATION.md  PHASE6_SUMMARY.md  REVIEW_AND_ENHANCEMENT_PLAN.md  SIEM_AUTO_INSTALL_SUMMARY.md  UPDATE_SYSTEM_SUMMARY.md  WEB_INTERFACE_PROGRESS.md
docs/config/: UPDATE_GUIDE.md
docs/diagrams/: README.md  database_erd.dot  generate_diagrams.sh  job_state_machine.dot  system_architecture.dot
docs/features/: AI_AGENT.md  ARTIFACTS.md  SIEM.md
docs/usage/: USAGE.md  USER_GUIDE.md  WORKFLOWS.md
fixtures/: iocs.txt  keywords.txt
fixtures/yara_rules/: sample_rules.yar
requirements/: base.txt  dev.txt  linux.txt  macos.txt  siem.txt  web.txt  windows.txt
scripts/: DOCKER_INSTALL.md  IMAGE_PATHS.md  docker-clean.sh  image-paths.py  image_paths.py  install-rivendell.py  rebuild.sh  restart-elastic.sh  restart-splunk.sh  rivendell-start.sh  start-testing-mode.sh
scripts/docker/: docker-clean.sh  docker-rebuild.sh
scripts/features/: download-nsrl.sh
scripts/jobs/: jobs-status.sh
scripts/manage/: clear-old-jobs.sh  stop-jobs.sh
scripts/orbstack/: cleanup-stale-handles.sh
scripts/siem/: splunk-app-export.sh  splunk-license-reset.sh
scripts/splunk/: splunk-app-export.sh
src/acquisition/bash/: gandalf.sh
src/acquisition/python/: gandalf.py
src/acquisition/windows/: Invoke-Gandalf.ps1  Set-ArtefactCollection
src/analysis/: Dockerfile  README.md  STRUCTURE.md  cli.py  elrond.py
src/analysis/core/: __init__.py  engine.py  executor.py
src/analysis/docker/: docker-compose-integrated.yml  docker-compose.prod.yml  docker-compose.yml
src/analysis/docs/: ARTEFACTS_IMPLEMENTATION_GUIDE.md  CONFIG.md  DOCKER-INTEGRATED.md  DOCKER-QUICKSTART.md  DOCKER.md  TESTING.md  (+1 more)
src/cli/: mordor.py  rivendell.py
src/common/: __init__.py  crypto.py  time_utils.py
src/models/: Modelfile.eru  Modelfile.eru-codellama  Modelfile.eru-deepseek  Modelfile.eru-gemma  Modelfile.eru-llama  Modelfile.eru-llama-large  Modelfile.eru-mistral  Modelfile.eru-phi  Modelfile.eru-qwen
src/mordor/: __init__.py  catalog.py  downloader.py  models.py  storage.py
src/web/: QUICKSTART.md  README.md  __init__.py  docker-compose.yml
tests/: QUICK_START.md  docker-compose.testing.yml  tests.conf
tests/docs/: BATCHES.md  CHANGES.md  README.md  SUMMARY.md  TEST_RESULTS.md  TEST_RUNNER_GUIDE.md
tests/fixtures/: sample_keywords.txt
tests/jobs/: gandalf_basic.json  linux_analysis.json  linux_archive.json  linux_basic.json  linux_collect_files.json  linux_debug.json  linux_disk_and_memory.json  linux_elastic.json  linux_extract_iocs.json  linux_full.json  linux_hash_collected.json  linux_keywords.json  linux_last_access.json  linux_memory.json  linux_memory_timeline.json  linux_navigator.json  linux_nsrl.json  linux_specific_files.json  linux_splunk.json  linux_symlinks.json  linux_timeline.json  linux_userprofiles.json  linux_yara.json  mac_analysis.json  mac_archive.json  mac_basic.json  mac_collect_files.json  mac_debug.json  mac_disk_and_memory.json  mac_elastic.json  mac_extract_iocs.json  mac_full.json  mac_hash_collected.json  mac_keywords.json  mac_last_access.json  mac_memory.json  mac_memory_timeline.json  mac_navigator.json  mac_nsrl.json  mac_specific_files.json  (+34 more)
tests/scripts/: run_all_tests.py  run_single_test.sh  run_test.py  tests.sh
web/: QUICKSTART.md  start.sh
web/backend/: .dockerignore  config.py  requirements.txt  tasks_docker.py
web/frontend/: package-lock.json  package.json
web/tests/: README.md  package.json
(+292 files in other folders)
