[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rivendell-dfir"
version = "2.0.0"
description = "Unified Digital Forensics Suite - Remote Acquisition (Gandalf) and Automated Analysis (Elrond)"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ben Smith", email = "cyberg3cko@users.noreply.github.com"}
]
keywords = ["forensics", "dfir", "incident-response", "memory-forensics", "digital-forensics", "acquisition", "remote-forensics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

dependencies = [
    # Core dependencies
    "pandas>=1.3.0,<3.0.0",
    "openpyxl>=3.0.0,<4.0.0",
    "pyyaml>=5.4,<7.0",
    "python-dateutil>=2.8.0",
    "tabulate>=0.8.9",
    "packaging>=21.0",
    "requests>=2.28.0",
    # Acquisition dependencies (Gandalf)
    "paramiko>=3.3.1",
    "scp>=0.14.5",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
linux = []
windows = [
    "pywin32>=300; platform_system=='Windows'",
]
macos = []
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-mock>=3.6",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
all = [
    "elrond-dfir[linux,windows,macos,web,dev]",
]

[project.scripts]
rivendell = "src.cli.rivendell:main"
rivendell-acquire = "src.acquisition.python.gandalf:main"
rivendell-analyze = "src.analysis.cli:main"
rivendell-mordor = "src.cli.mordor:main"
rivendell-web = "src.web.backend.main:start_server"
# Legacy compatibility
elrond = "src.analysis.cli:main"
gandalf = "src.acquisition.python.gandalf:main"

[project.urls]
Homepage = "https://github.com/cmdaltr/rivendell"
Documentation = "https://github.com/cmdaltr/rivendell"
Repository = "https://github.com/cmdaltr/rivendell.git"
Issues = "https://github.com/cmdaltr/rivendell/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = []

[tool.black]
line-length = 100
target-version = ['py38']
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/acquisition --cov=src/analysis --cov=src/web --cov=src/cli --cov-report=html --cov-report=term"
